validate form, passwords, & store data in script

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             type="tel"
             id="phone"
             placeholder="999-999-9999"
+            name="phone"
             required
             pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
           />
@@ -43,6 +44,7 @@
             id="email"
             placeholder="email@address.com"
             required
+            name="email"
           />
         </div>
         <!-- Website URL -->
@@ -53,6 +55,7 @@
             id="website"
             placeholder="https://google.com"
             required
+            name="website"
           />
         </div>
         <!-- Password -->
@@ -74,6 +77,7 @@
             type="password"
             id="password2"
             placeholder="Confirm Password"
+            name="password"
             required
             pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[a-zA-Z]).{8,}$"
           />
